Setup: Fix spacing between module's label and module's more info link

--- a/css/setup.scss
+++ b/css/setup.scss
@@ -599,6 +599,9 @@ body {
   color: $ibo-color-blue-700;
   font-size: $ibo-font-size-200;
 }
+.setup--wizard-choice--label + .setup--wizard-choice--more-info {
+  margin-left: 0.5rem;
+}
 /* integrityCheck: end (do not remove/edit) */
 
 /* Legacy inline stuff */
